--- a/deploy/helm/alpine-pending/Chart.yaml
+++ b/deploy/helm/alpine-pending/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 version: 1.0.0
 appVersion: "3.7"
-description: Alpine pod that can not be scheduled because the resource limits are too small. The status becomes Pending. Only for test purposes.
+description: This chart creates two pending alpine pods. One non scheduled because the resource limits are too small. The other scheduled. Only for test purposes.
 name: alpine-pending
