Verbose to bool

--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/values.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/values.yaml
@@ -97,4 +97,4 @@ alpine-pending-non-scheduled:
 tags:
   one-ksm-instance: true
   two-ksm-instances: false
-  with-pod-pending: false
+  with-pending-pods: false
