Helm chart fixes (#208)

--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
@@ -20,6 +20,8 @@ spec:
           [{"operator": "Exists", "effect": "NoSchedule"},{"operator": "Exists", "effect": "NoExecute"}]
     spec:
       serviceAccountName: {{ .Values.serviceAccount.name }}
+      hostNetwork: true # This option is a requirement for the Infrastructure Agent to report the proper hostname in New Relic.
+      dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: {{ .Values.daemonset.name }}
           image: "{{ .Values.daemonset.image.repository }}:{{ .Values.daemonset.image.tag }}"
