--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/service-account.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/service-account.yaml
@@ -2,4 +2,6 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccount.name }}
+{{- if (gt (.Capabilities.KubeVersion.Minor | atoi) 5) }}  
 automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
+{{- end}}
