Adding default namespace to helm chart

--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
@@ -2,6 +2,7 @@ apiVersion: extensions/v1beta1
 kind: DaemonSet
 metadata:
   name: {{ .Values.daemonset.name }}
+  namespace: {{ .Values.daemonset.namespace }}
   labels:
     app: {{ .Values.daemonset.name }}
 spec:
