--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/cluster-role-binding.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/cluster-role-binding.yaml
@@ -14,5 +14,5 @@ roleRef:
 subjects:
 - kind: ServiceAccount
   name: {{ .Values.serviceAccount.name }}
-  namespace: default
+  namespace: {{ .Values.serviceAccount.namespace }}
 {{- end }}
