--- a/deploy/newrelic-infra.yaml
+++ b/deploy/newrelic-infra.yaml
@@ -61,7 +61,7 @@ spec:
       dnsPolicy: ClusterFirstWithHostNet
       containers:
         - name: newrelic-infra
-          image: newrelic/infrastructure-k8s:1.0.0
+          image: newrelic/infrastructure-k8s:1.0.0-beta2.4
           resources:
             limits:
               memory: 150M
