--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/service-account.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/service-account.yaml
@@ -3,6 +3,6 @@ kind: ServiceAccount
 metadata:
   name: {{ .Values.serviceAccount.name }}
   namespace: {{ .Values.serviceAccount.namespace }}
-{{- if (gt (.Capabilities.KubeVersion.Minor | atoi) 5) }}
+{{- if semverCompare ">=1.6.0" .Capabilities.KubeVersion.GitVersion }}
 automountServiceAccountToken: {{ .Values.serviceAccount.automountServiceAccountToken }}
 {{- end}}
