--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/cluster-role-binding.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/cluster-role-binding.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.rbac }}
-{{- if (lt (.Capabilities.KubeVersion.Minor | atoi) 6) }}
+{{- if semverCompare "<1.6.0" .Capabilities.KubeVersion.GitVersion }}
 apiVersion: rbac.authorization.k8s.io/v1alpha1
 {{- else }}
 apiVersion: rbac.authorization.k8s.io/v1beta1
