Fix verbose in helm daemonset (#217)

--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
@@ -46,7 +46,7 @@ spec:
             - name: "NRIA_LICENSE_KEY"
               value: {{ .Values.integration.newRelicLicenseKey | quote }}
             - name: "NRIA_VERBOSE"
-              value: {{ .Values.integration.verbose | quote }}
+              value: {{ .Values.integration.verbose | int | toString | quote }}
             {{- if .Values.integration.collectorURL }}
             - name: "NRIA_COLLECTOR_URL"
               value: {{ .Values.integration.collectorURL }}
