--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/values.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/values.yaml
@@ -6,10 +6,10 @@ daemonset:
     tag: 1.0.0-beta2.4
   resources:
     limits:
-      memory: 100Mi
+      memory: 150M
     requests:
       cpu: 100m
-      memory: 100Mi
+      memory: 30M
 
 serviceAccount:
   name: newrelic
