--- a/deploy/helm/newrelic-infrastructure-k8s-e2e/values.yaml
+++ b/deploy/helm/newrelic-infrastructure-k8s-e2e/values.yaml
@@ -3,7 +3,7 @@ daemonset:
   namespace: default
   image:
     repository: newrelic/infrastructure-k8s
-    tag: 1.0.0-beta2.4
+    tag: 1.0.0
   resources:
     limits:
       memory: 150M
