Update image name in skaffold.yml
This change would allow us to use a private repository in quay.io to push our
development images and test them in real clusters.

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,7 +2,10 @@ apiVersion: skaffold/v1alpha2
 kind: Config
 build:
   artifacts:
-  - imageName: newrelic/infrastructure-k8s-dev # Only suitable for local development since it does not really exists.
+  # When you're using minikube context, this image will be pushed to your local
+  # docker daemon. If you're using a non-minikube context, the image will be
+  # pushed to a private quay.io repository.
+  - imageName: quay.io/newrelic/infrastructure-k8s-dev
     workspace: .
   local: {}
 deploy:
