Add container filesystem metrics (#256)

--- a/e2e/charts/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
+++ b/e2e/charts/newrelic-infrastructure-k8s-e2e/templates/daemonset.yaml
@@ -32,6 +32,7 @@ spec:
       containers:
         - name: {{ .Values.daemonset.name }}
           image: "{{ .Values.daemonset.image.repository }}:{{ .Values.daemonset.image.tag }}"
+          imagePullPolicy: Always
           resources:
 {{ toYaml .Values.daemonset.resources | indent 12 }}
           volumeMounts:
