e2e/cmd: Extract the logic for retrying operations
Move the logic to a specific package and use it in `waitForKSM`
function.

--- a/.papers_config.yml
+++ b/.papers_config.yml
@@ -67,4 +67,5 @@ exceptions:
   - "github.com/newrelic/infra-integrations-beta/integrations/kubernetes/e2e/jsonschema" #e2e tests
   - "github.com/newrelic/infra-integrations-beta/integrations/kubernetes/e2e/k8s" #e2e tests
   - "github.com/newrelic/infra-integrations-beta/integrations/kubernetes/e2e/timer" #e2e tests
+  - "github.com/newrelic/infra-integrations-beta/integrations/kubernetes/e2e/retry" #e2e tests
 
