Fix all import paths after moving from the old repo

--- a/nr-kubernetes-definition.yml
+++ b/nr-kubernetes-definition.yml
@@ -6,6 +6,6 @@ os: linux
 commands:
   metrics:
     command:
-      - ./bin/nr-kubernetes
+      - ./bin/nri-kubernetes
       - --metrics
     interval: 15
