Fix the name of the integration binary (#2)

--- a/nr-kubernetes-definition.yml
+++ b/nr-kubernetes-definition.yml
@@ -6,6 +6,6 @@ os: linux
 commands:
   metrics:
     command:
-      - ./bin/nri-kubernetes
+      - ./bin/nr-kubernetes
       - --metrics
     interval: 15
